fixed unwanted image clipping

--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -25,7 +25,7 @@
         @include breakpoint-up(large){
             flex: 2;
             order: 2;
-            min-height: 32rem;
+            min-height: 74.5vh;
             margin-left: 11.625rem;
            // background-image: url('/images/bg-intro-desktop.svg');
             //background-position: left center;
@@ -84,11 +84,11 @@
 
             @include breakpoint-up(large)
             {
-                width: 116%;
-                height: 128%;
+                width: 100%;
+                height: 95vh;
                 background-size: 86%;
                 background-repeat: no-repeat;
-                background-position: 6.4375rem -6.375rem;
+                background-position: 7.15vw -15.33vh;
             }
         }
     }
